Tue Feb 27 21:09:01 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/MCAST_Parser.cpp (parse_string):

          Removed emulated exception macro that snuck back in to the
          source during the merge.

Tue Feb 27 18:43:11 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/Exception.h:
        * tao/SystemException.h:

          Made copy constructor public again to silence VC7.1 level 4
          warnings.  This constructor should be protected, but VC7.1 at
          warning level 4 complains about the inaccessible copy
          constructor preventing it from being caught.  However, that
          probably isn't true for most cases since CORBA exceptions are
          typically caught by reference, not by copy.

          Added a note describing why the copy constructor is not
          protected.

        * tao/diffs/Object_Key.diff:

          Synchronized with latest version of Object_KeyC.cpp.

Tue Feb 27 13:21:05 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IDL_Test/union.idl:

          Changed to only exclude the union with negative cases from SunCC
          version 5.8 or below.

Tue Feb 27 12:41:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * examples/TypeCode_Creation/main.cpp:
        * examples/TypeCode_Creation/test.idl:

          Modified the idl union to not use negative numbers in the cases.

        * tests/IDL_Test/union.idl:

          Added a union that uses negative numbers in the cases.  This is
          currently #ifdef'ed to not be processed by the Sun preprocessor as
          it separates the negative sign and the number causing problems for
          the tao_idl lexer/scanner.  This is for bugzilla bug #2821.

Tue Feb 27 11:05:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:

          Some compilers do not process the #if before the macro subsitution
          adjacent string concatination.
